--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <nav>
         <img src="./assets/FES.svg" class="logo" alt="" />
         <ul>
-          <li><a href="#about">About</a></li>
+          <li><a href="#about">Abouts</a></li>
           <li><a href="#discord">Discord</li></a>
           <li><a href="#contact">Contact</li></a>
         </ul>
