--- a/index.html
+++ b/index.html
@@ -20,11 +20,13 @@
       </nav>
       <header>
         <div class="row">
+          <div class="home__description">
             <div>
                 <h1>Best Place to learn Frontend</h1>
                 <p class="subheader">Go from absolute beginner to pro with a simplified process</p>
-                <button>Start Now</button>
+                <button class="home__description--button">Start Now</button>
             </div>
+          </div>
             <figure>
           <img src="/assets/laptop.png" alt="Home page Image" />
         </figure>
