--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <p class="subheader">Go from absolute beginner to pro with a simplified process</p>
                 <button class="home__description--button">Start Now</button>
             </div>
-          </div>
+          </div>  
             <figure>
           <img src="/assets/laptop.png" alt="Home page Image" />
         </figure>
@@ -49,8 +49,8 @@
                         necessitatibus optio dolore quas! Quam modi rerum ipsum, ut, ullam
                         vero recusandae repudiandae reprehenderit cumque quo nulla sequi
                         asperiores numquam, repellendus facilis!
-                    </p class="section__description--para">
-                    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nulla
+                    </p>
+                    <p class="section__description--para"> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nulla
                         voluptates deserunt sit cumque praesentium quos in adipisci suscipit,
                         illum architecto nihil ipsa omnis! Dolor dolore nemo nesciunt, veritatis
                         labore nobis.
